# plantrace

./: .gitignore  README.ko.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: why.md
.claude/plans/: phase-1a-followup.md
.codex/: hooks.json
docs/: architecture.md  commands.md  decisions.md  lesson-learned.md  notion_db_schemas.md  playbook.md  roadmap.md  security-audit.md
docs/evidence/: hooks.md
docs/evidence/hook-payloads/: ExitPlanMode-20260528-143457-256.json
examples/: plantrace.json
schemas/: plantrace.schema.json
scripts/: echo_payload.ps1
src/plantrace/: __init__.py  config.py  db.py  ids.py  jsonl.py
src/plantrace/hooks/: exit_plan_mode.py
src/plantrace/notion/: projector.py
src/plantrace/slash/: why.py
tests/: conftest.py  test_phase_1a.py  test_phase_1a_notion.py
